# comp0034-tutorials-2025

./: .gitignore  pyproject.toml
docs/week1/: 1-concepts.md  2-basic-streamlit-app.md  3-basic-dash-app.md  4-basic-flask-app.md  5-start-coursework.md
docs/week2/: 3-dash-layout.md
src/data/: mock_api.py
src/flask_app/: flask_paralympics.py
src/flask_app/templates/: paralympics.html
src/utils/: line_chart.py
