[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0034-activities"
version = "2025.01"
dependencies = [
    "flask",
    "pandas",
    "streamlit",
    "dash",
    "plotly",
    "dash-ag-grid",
    "dash-bootstrap-components"
]

[tool.setuptools.packages.find]
where = ["."]